# semantic-shifts

./: Makefile  README.md  pyproject.toml
data/: dictionaries_training.csv
dictionaries_for_parsing/: amhar.txt  chol.txt  qechua.txt
parsed_dictionaries/: amhar_polysemy.txt  chol_polysemy.txt  gamilaraay_yuwaalaraay_yuwaalayaay.txt  quechua_polysemy.txt  yiryoront.txt
parsers/: alabama_parser.py  amhar_parser.py  breton_download.py  breton_online_parser.ipynb  breton_parse.py  chol_parser.py  dagaare_parser.py  dsl_parser.py  dsl_parser1.py  dsl_parser2.py  dsl_parser_crymtatar.py  dsl_parser_oldenglish.py  dsl_parser_yiddish.py  mongolian_parser.py  parse_derivation.py  parse_yiryoront.py  parse_yuwaalara.py  qechua_parser.py
semantic_shifts/: __main__.py  config.py  dataset.py  model.py  train.py
