[tool.poetry]
name = "semantic-shifts"
version = "0.1.0"
description = ""
authors = ["Elisei Rykov <esrykov@edu.hse.ru>", "Ilya Gruntov <altaica@narod.ru>"]
readme = "README.md"
packages = [{include = "semantic_shifts"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^2.0.1"
tensorflow-hub = "^0.13.0"
tensorflow = "^2.12.0"
transformers = "^4.29.2"
tqdm = "^4.65.0"
loguru = "^0.7.0"
scikit-learn = "^1.2.2"
torch = "1.10"
accelerate = "^0.19.0"
setuptools = "59.5.0"
sentencepiece = "^0.1.99"
scipy = "^1.10.1"
tensorflow-text = "^2.12.1"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
autoflake = "^2.1.1"
pyupgrade = "^3.4.0"
isort = "^5.12.0"
pylint = "^2.17.4"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
